feat(notifications): fix email notifications and change notif UI